--- a/theatrebookings/templates/register.html
+++ b/theatrebookings/templates/register.html
@@ -4,6 +4,11 @@
 {% endblock %}
 
 {% block body %}
+{% if message %}
+<div class="alert alert-danger" role="alert">
+  {{ message }}
+</div>
+{% endif %}
 
 <div class="card" >
   <div class="card-body">
@@ -12,20 +17,20 @@
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" name="name" placeholder="Your name">
+          <input type="text" class="form-control" name="name" placeholder="Your name" required>
         </div>
       </div>
       <div class="form-group row">
           <label class="col-sm-2 col-form-label">Email address</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" name="email" placeholder="Enter email">
+            <input type="email" class="form-control" name="email" placeholder="Enter email" required>
           </div>
         </div>
 
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">Credit card</label>
           <div class="col-sm-10">
-            <input type="number" maxlength="19" class="form-control" name="creditcard" placeholder="Number">
+            <input type="number" maxlength="19" class="form-control" name="creditcard" placeholder="Number" required>
           </div>
         </div>
       <button type="submit" style="width: 100%;" class="btn btn-primary">Register</button>
