--- a/theatrebookings/templates/home.html
+++ b/theatrebookings/templates/home.html
@@ -13,14 +13,14 @@
   <div class="row">
   {%for shw in shows%}
     <div class="col-4">
-      <div class="card">
-        <img src={{shw.img_link}} class="card-img-top" alt="...">
+      <div class="card" style="height: 95%; margin-bottom: 15px;">
+        <img src={{shw.img_link}} class="card-img-top">
         <div class="card-body">
           <div class="row">
-            <div class="col-8">
+            <div class="col-7">
               <h5 class="card-title">{{shw.name}}</h5>
             </div>
-            <div class="col-4">
+            <div class="col-5">
               <div class="float-right">
                 <span class="badge badge-warning">{{shw.genre}}</span>
                 <span class="badge badge-primary">{{shw.duration}}h</span>
