--- a/theatrebookings/templates/base.html
+++ b/theatrebookings/templates/base.html
@@ -32,6 +32,10 @@
             {% if user!= None %}
             {% if user.name == "Admin" %}
             <li class="nav-item">
+              <a class="nav-link" href="/admin/database">Database</a>
+            </li>
+
+            <li class="nav-item">
               <a class="nav-link" href="/shows/add">Add show</a>
             </li>
 
